fixed horizontal scroll and some spacing issues

--- a/inspect-gpt-next/styles/globals.css
+++ b/inspect-gpt-next/styles/globals.css
@@ -7,6 +7,8 @@
 
 body {
   background: #141d19;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 h1 {
